test/cases/parser/Datatypes1.errors
src/Datatypes1.b:3:24: Syntax error (expected ',' or '}')
