test/cases/parser/Datatypes1.b
module Datatypes1
interface {
  datatype T = C { i32 i32 };
}